--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,11 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_marginTop="10dp">
         <ImageView
             android:layout_width="100dp"
             android:layout_height="107dp"
-            android:background="@mipmap/ic_launcher"
+            android:background="@drawable/superman"
             android:scaleType="fitXY"/>
         <TextView
             android:layout_width="wrap_content"
@@ -25,7 +26,7 @@
             android:textColor="#90000000"
             android:textScaleX="1.1"
             android:typeface="normal"/>
-        
+
     </LinearLayout>
     
     <RelativeLayout
@@ -33,10 +34,11 @@
         android:layout_height="wrap_content">
         <GridView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:id="@+id/gv_home"
             android:layout_centerInParent="true"
-            android:gravity="center"
+
             android:horizontalSpacing="10dp"
             android:verticalSpacing="10dp"
             android:numColumns="3">
