--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -31,14 +31,13 @@
     
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <GridView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
+            android:layout_height="wrap_content"
             android:id="@+id/gv_home"
             android:layout_centerInParent="true"
-
+            android:gravity="center"
             android:horizontalSpacing="10dp"
             android:verticalSpacing="10dp"
             android:numColumns="3">
