--- a/app/src/main/res/layout/activity_setup_2.xml
+++ b/app/src/main/res/layout/activity_setup_2.xml
@@ -6,10 +6,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_weight="10"
+        android:background="@color/purple"
+        android:gravity="center">
+
+        <include layout="@layout/setup_radiogroup"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_weight="100"
         android:background="@android:color/white"
-        android:layout_weight="100">
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -17,11 +28,12 @@
             android:background="@color/purple">
 
             <ImageView
+                android:id="@+id/imgv"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:id="@+id/imgv"
                 android:layout_centerInParent="true"
-                android:background="@drawable/add"/>
+                android:background="@drawable/add" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -30,7 +42,7 @@
                 android:gravity="center"
                 android:text="SIM卡绑定"
                 android:textColor="@android:color/white"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
         </RelativeLayout>
 
@@ -47,7 +59,7 @@
                 android:layout_height="60dp"
                 android:layout_gravity="center_vertical|left"
                 android:layout_marginLeft="15dp"
-                android:background="@drawable/recomand_icon"/>
+                android:background="@drawable/recomand_icon" />
 
             <TextView
                 style="@style/textview16sp"
@@ -58,38 +70,27 @@
                 android:lineSpacingMultiplier="1.5"
                 android:text="绑定SIM卡后，当再次重启手机时，若SIM卡信息发生变化，手机卫士会自动发送报警短信给安全号码！"
                 android:textColor="@color/purple"
-                android:textScaleX="1.1"/>
+                android:textScaleX="1.1" />
 
         </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:gravity="center">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:gravity="center">
 
-                <Button
-                    android:layout_width="180dp"
-                    android:layout_height="45dp"
-                    android:id="@+id/btn_bind_sim"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/sim_bind_selector"
-                    android:gravity="center"/>
+            <Button
+                android:id="@+id/btn_bind_sim"
+                android:layout_width="180dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/sim_bind_selector"
+                android:gravity="center" />
 
         </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_weight="10"
-        android:background="@color/purple"
-        android:gravity="center">
-
-        <include layout="@layout/setup_radiogroup"/>
 
     </LinearLayout>
 
