--- a/app/src/main/res/anim/next_in.xml
+++ b/app/src/main/res/anim/next_in.xml
@@ -1,9 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fromXDelta="100%p"
-    android:toXDelta="0"
-    android:fromYDelta="0"
-    android:toYDelta="0"
-    android:duration="500"
-    android:repeatCount="0">
-</translate>
+<set xmlns:android="http://schemas.android.com/apk/res/android" >
+    <translate xmlns:android="http://schemas.android.com/apk/res/android"
+        android:fromXDelta="100%p"
+        android:toXDelta="0"
+        android:fromYDelta="0"
+        android:toYDelta="0"
+        android:duration="500"
+        android:repeatCount="0">
+    </translate>
+
+    <alpha
+    android:fromAlpha="0.1"
+    android:toAlpha="1.0"
+    android:duration="500"/>
+
+    <scale
+    android:interpolator=
+        "@android:anim/accelerate_decelerate_interpolator"
+    android:fromXScale="0.0"
+    android:toXScale="1.4"
+    android:fromYScale="0.0"
+    android:toYScale="1.4"
+    android:pivotX="50%"
+    android:pivotY="50%"
+    android:fillAfter="false"
+    android:duration="500" />
+</set>
