--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
 
     <!-- 手机防盗模块需要用到 -->
     <color name="purple">#5542B8</color>
+    <!-- 通讯卫士模块要用到的 2017.10.30 -->
+    <color name="bright_purple">#C218D9</color>
+    <color name="light_gray">#D1D0CE</color>
 </resources>
