--- a/app/src/main/res/layout/item_list_blackcontact.xml
+++ b/app/src/main/res/layout/item_list_blackcontact.xml
@@ -28,7 +28,17 @@
         style="@style/textview14sp"
         android:layout_toRightOf="@id/view_black_icon"
         android:layout_below="@id/tv_black_name"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="7dp"
+        android:textColor="@color/purple"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_black_type"
+        style="@style/textview14sp"
+        android:layout_toRightOf="@id/view_black_icon"
+        android:layout_below="@id/tv_black_mode"
+        android:layout_marginTop="7dp"
         android:textColor="@color/purple"/>
     
     <View
